# Solid-Games-Parser

./: .gitignore  README.md  pyproject.toml
src/solid_games_parser/: bot.py  config.py  main.py  parser.py
tests/: conftest.py  test_run.py
