[project]
name = "solid-games-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "VladRys",email = "rysichvlad0910@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "selenium (>=4.40.0,<5.0.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]

[tool.poetry]
packages = [{include = "solid_games_parser", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
